tests/fixtures/pass/vec_reserve_overflow.sali
let main(): i32 = {
  let mut values: Vec(i32) = Vec(i32).new()
  values.push(1)
  values.reserve(18446744073709551615)
  42
}
