tests/fixtures/fail/box_mut_borrow_conflict.sali
let main(): i32 = {
  let mut boxed = Box.new(42)
  let mutable = boxed.as_mut()
  let shared = boxed.as_ref()
  mutable + shared
}
